# oppgave

./: Cargo.toml  README.md
examples/: bench.rs  producer.rs  worker.rs
src/: lib.rs
